--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,21 @@
 .viewer-container {
   flex: 1;
 }
+
+.sidebar {
+  width: 300px;
+  height: 100%;
+  background-color: #f9f9f9;
+  border-right: 1px solid #e6e6e6;
+}
+
+.btn {
+  background-color: beige;
+  border: 1px solid #e6e6e6;
+  border-radius: 4px;
+  margin: 0.5em;
+}
+
+.active {
+  background-color: skyblue;
+}
