--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,20 @@
 .app-container {
   display: flex;
+  flex-direction: row;
+  width: 100%;
   height: 100vh;
 }
 
 .viewer-container {
-  flex: 1;
+  width: 84%;
 }
 
 .sidebar {
-  width: 300px;
+  width: 16%;
   height: 100%;
   background-color: #f9f9f9;
   border-right: 1px solid #e6e6e6;
+  overflow: auto;
 }
 
 .btn {
