--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,15 @@
 }
 
 .viewer-container {
-  width: 84%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
 .sidebar {
-  width: 16%;
+  flex: 0 0 300px;
   height: 100%;
   background-color: #f9f9f9;
   border-right: 1px solid #e6e6e6;
